--- a/roles/helium/templates/env.j2
+++ b/roles/helium/templates/env.j2
@@ -1,43 +1,70 @@
-APP_NAME=Ionsio
-APP_DESCRIPTION=Run and Share Code
-APP_KEY={{ app_key }}
-APP_DEBUG_MODE=false
-APP_URL=https://ionsio.sh
-APP_EMAIL=hello@clivern.com
+# In all environments, the following files are loaded if they exist,
+# the latter taking precedence over the former:
+#
+#  * .env                contains default values for the environment variables needed by the app
+#  * .env.local          uncommitted file with local overrides
+#  * .env.$APP_ENV       committed environment-specific defaults
+#  * .env.$APP_ENV.local uncommitted environment-specific overrides
+#
+# Real environment variables win over .env files.
+#
+# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
+# https://symfony.com/doc/current/configuration/secrets.html
+#
+# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
+# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-CURRENT_THEME=default
+###> symfony/framework-bundle ###
+APP_ENV={{ app_env }}
+APP_SECRET={{ app_secret }}
+APP_TIMEZONE={{ app_timezone }}
+DATABASE_URL=mysql://{{ app_db_username }}:{{ app_db_password }}@127.0.0.1:3306/{{ app_db_name }}?serverVersion=8&charset=utf8mb4
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE={{ app_db_name }}
-DB_USERNAME={{ app_db_username }}
-DB_PASSWORD={{ app_db_password }}
+###< doctrine/doctrine-bundle ###
 
-EMAIL_BACKEND=filebased
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+###> symfony/mailer ###
+#MAILER_DSN={{ mailer_dsn }}
+###< symfony/mailer ###
 
-ALLOWED_HOSTS=*
-APP_TIMEZONE=UTC
-APP_LANGUAGE=en-us
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN={{ messenger_transport }}
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
 
-DJANGO_LOGGING_HANDLERS=
-DJANGO_LOGGING_LEVEL=warning
-DJANGO_LOGGING_PROPAGATE=false
+###> symfony/amazon-mailer ###
+# MAILER_DSN=ses://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
+# MAILER_DSN=ses+smtp://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
+###< symfony/amazon-mailer ###
 
-APP_LOGGING_HANDLERS=file
-APP_LOGGING_LEVEL=info
-APP_LOGGING_PROPAGATE=true
+###> symfony/mailchimp-mailer ###
+# MAILER_DSN=mandrill://KEY@default
+# MAILER_DSN=mandrill+smtp://USERNAME:PASSWORD@default
+###< symfony/mailchimp-mailer ###
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD={{ redis_password }}
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
 
-NEW_RELIC_CONFIG_FILE_PATH=newrelic.ini
-GOOGLE_ANALYTICS_ID=G-H555037LBS
+###> symfony/mailjet-mailer ###
+# MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
+# #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
+
+###> symfony/postmark-mailer ###
+# MAILER_DSN=postmark://ID@default
+###< symfony/postmark-mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
+
+###> symfony/sendinblue-mailer ###
+# MAILER_DSN=sendinblue+api://KEY@default
+# MAILER_DSN=sendinblue+smtp://USERNAME:PASSWORD@default
+###< symfony/sendinblue-mailer ###
+
+###> symfony/mailtrap ###
+# MAILER_DSN=smtp://USERNAME:PASSWORD@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailtrap ###
