--- a/roles/helium/templates/worker.service.j2
+++ b/roles/helium/templates/worker.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn Instance to Run ptimedog Worker %i
+Description=Helium Worker %i
 After=network.target
 
 StartLimitIntervalSec=500
@@ -14,7 +14,7 @@ RestartSec=5s
 Environment=LANG=en_US.UTF-8
 Environment=LC_ALL=en_US.UTF-8
 Environment=LC_LANG=en_US.UTF-8
-ExecStart=/srv/app/current/venv/bin/python /srv/app/current/manage.py rqworker default
+ExecStart=php /srv/app/current/bin/console messenger:consume async
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 PrivateTmp=true
