--- a/roles/helium/templates/env.j2
+++ b/roles/helium/templates/env.j2
@@ -64,3 +64,9 @@ MESSENGER_TRANSPORT_DSN={{ messenger_transport }}
 ###> symfony/mailtrap ###
 # MAILER_DSN=smtp://USERNAME:PASSWORD@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailtrap ###
+
+###> helium/demo ###
+{% if demo_mode == 'enabled' %}
+DEMO_MODE=enabled
+{% endif %}
+###< helium/demo ###
