--- a/roles/helium/templates/env.j2
+++ b/roles/helium/templates/env.j2
@@ -19,15 +19,11 @@ APP_ENV={{ app_env }}
 APP_SECRET={{ app_secret }}
 APP_TIMEZONE={{ app_timezone }}
 DATABASE_URL=mysql://{{ app_db_username }}:{{ app_db_password }}@127.0.0.1:3306/{{ app_db_name }}?serverVersion=8&charset=utf8mb4
-
-###< doctrine/doctrine-bundle ###
-
-###> symfony/mailer ###
-#MAILER_DSN={{ mailer_dsn }}
-###< symfony/mailer ###
+MAILER_DSN={{ mailer_dsn }}
+MESSENGER_TRANSPORT_DSN={{ messenger_transport }}
 
 ###> symfony/messenger ###
-MESSENGER_TRANSPORT_DSN={{ messenger_transport }}
+# MESSENGER_TRANSPORT_DSN= doctrine://default
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
