--- a/roles/common/templates/motd.j2
+++ b/roles/common/templates/motd.j2
@@ -11,5 +11,5 @@
 
 Server is Managed by Oxygen Ansible Playbook
 
-* Link: https://github.com/Colvern/Oxygen
+* Link: https://github.com/Clivern/Oxygen
 * Version: v1.0.0
