--- a/roles/helium/templates/env.j2
+++ b/roles/helium/templates/env.j2
@@ -20,6 +20,7 @@ APP_SECRET={{ app_secret }}
 APP_TIMEZONE={{ app_timezone }}
 DATABASE_URL=mysql://{{ app_db_username }}:{{ app_db_password }}@127.0.0.1:3306/{{ app_db_name }}?serverVersion=8&charset=utf8mb4
 MAILER_DSN={{ mailer_dsn }}
+APP_LOCALE={{ app_locale }}
 MESSENGER_TRANSPORT_DSN={{ messenger_transport }}
 
 ###> symfony/messenger ###
