--- a/roles/common/templates/motd.j2
+++ b/roles/common/templates/motd.j2
@@ -9,7 +9,7 @@
                `~~~~~``~`
         <[--------------------]>
 
-Server is Managed by Argon Ansible Playbook
+Server is Managed by Oxygen Ansible Playbook
 
-* Link: https://github.com/ionsio/Argon
+* Link: https://github.com/ionsio/Oxygen
 * Version: v1.0.0
